--- a/Service Fabric Remoting/ActorNetFramework.Interfaces/ActorNetFramework.Interfaces.csproj
+++ b/Service Fabric Remoting/ActorNetFramework.Interfaces/ActorNetFramework.Interfaces.csproj
@@ -88,6 +88,7 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrameworkMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IActorNetFramework.cs" />
   </ItemGroup>
