--- a/Service Fabric Remoting/StatefulApi/StatefulApi.csproj
+++ b/Service Fabric Remoting/StatefulApi/StatefulApi.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ActoreNetCore.Interfaces\ActoreNetCore.Interfaces.csproj" />
     <ProjectReference Include="..\ActorNetFramework.Interfaces\ActorNetFramework.Interfaces.csproj" />
   </ItemGroup>
 
